--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -49,8 +49,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### My Vineyard"
    ]
@@ -108,7 +110,7 @@
     "for js in scen_fnames:\n",
     "    scen_names[js] = pd.read_json(os.path.join(js)).keys()[0]  #.tolist())\n",
     "#scen_names = [x.strip(\".json\") for x in os.listdir() if \"Scenario\" in x and \".json\" in x]\n",
-    "scen_names"
+    "#print(scen_names)"
    ]
   },
   {
@@ -327,7 +329,7 @@
     "        # now run\n",
     "        #s = str_d['irrigation'].value\n",
     "        _ = mjknowling.run_scen(\"temp\", scen_d=on_button_clicked.scen_d)\n",
-    "        print(\"evaluation of {} complete\".format(s))\n",
+    "        #print(\"evaluation of {} complete\".format(s))\n",
     "        #plot = p_d['plot'].value\n",
     "        #print(\"plotting {}\".format(plot))\n",
     "        #mjknowling.plot_scen(scens, plot)\n",
