support of daily irrig max constraint and more on README

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -157,6 +157,7 @@
     "def process_scen_json(scen_json_fname):\n",
     "    mapper = {\"Crush Price\": \"grape_price\", \n",
     "              \"Maximum irrigation mm per phenology\": \"IRSTAGECAP\",\n",
+    "              \"Maximum daily irrigation mm per phenology\": \"IRDAYSTAGECAP\",\n",
     "              \"Water market cost\": \"water_market_rate\",\n",
     "              \"Water delivery cost\": \"water_delivery_rate\",\n",
     "              \"Water entitlement\": \"water_entitlement\",\n",
@@ -216,7 +217,7 @@
     "        # TODO: impose daily maximum on VineLOGIC\n",
     "                \n",
     "        # fresh code\n",
-    "        if k == \"IRREFILLPER\":\n",
+    "        elif k == \"IRREFILLPER\":\n",
     "            f = \"RuleBasedIrrigationData.json\"\n",
     "            if isinstance(v, float):\n",
     "                df = pd.read_json(os.path.join(ws, f))\n",
@@ -229,7 +230,7 @@
     "                raise Exception\n",
     "            else:\n",
     "                raise Exception\n",
-    "        if k == \"IRCRITSW\":\n",
+    "        elif k == \"IRCRITSW\":\n",
     "            f = \"RuleBasedIrrigationData.json\"\n",
     "            if isinstance(v, float):\n",
     "                df = pd.read_json(os.path.join(ws, f))\n",
@@ -242,7 +243,7 @@
     "                raise Exception\n",
     "            else:\n",
     "                raise Exception\n",
-    "        if k == \"IRRETNPERIOD\":\n",
+    "        elif k == \"IRRETNPERIOD\":\n",
     "            f = \"RuleBasedIrrigationData.json\"\n",
     "            if isinstance(v, float):\n",
     "                df = pd.read_json(os.path.join(ws, f))\n",
@@ -250,6 +251,19 @@
     "                od = df[\"IRRETNPERIOD\"][\"Value\"]\n",
     "                df[\"IRRETNPERIOD\"][\"Value\"] = [v for x in od]\n",
     "                #print(df[\"IRRETNPERIOD\"][\"Value\"])\n",
+    "                df.to_json(os.path.join(ws, f), indent=4)\n",
+    "            elif isinstance(v, list) and len(v) == 5:\n",
+    "                raise Exception\n",
+    "            else:\n",
+    "                raise Exception\n",
+    "        elif k == \"IRDAYSTAGECAP\":\n",
+    "            f = \"RuleBasedIrrigationData.json\"\n",
+    "            if isinstance(v, float):\n",
+    "                df = pd.read_json(os.path.join(ws, f))\n",
+    "                #print(df[\"IRDAYSTAGECAP\"][\"Value\"])\n",
+    "                od = df[\"IRDAYSTAGECAP\"][\"Value\"]\n",
+    "                df[\"IRDAYSTAGECAP\"][\"Value\"] = [v for x in od]\n",
+    "                #print(df[\"IRDAYSTAGECAP\"][\"Value\"])\n",
     "                df.to_json(os.path.join(ws, f), indent=4)\n",
     "            elif isinstance(v, list) and len(v) == 5:\n",
     "                raise Exception\n",
