supported further irrig control - daily max per phenol stage

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -200,17 +200,17 @@
     "        \n",
     "        if k == \"IRSTAGECAP\":  # max over phenological stage(s)\n",
     "            f = \"RuleBasedIrrigationData.json\"\n",
+    "            df = pd.read_json(os.path.join(ws, f))\n",
+    "            od = df[k][\"Value\"]\n",
     "            if isinstance(v, float):\n",
     "                #print(\"uniform max irr mm: {}\".format(v))\n",
-    "                df = pd.read_json(os.path.join(ws, f))\n",
     "                #print(df[\"IRSTAGECAP\"][\"Value\"])\n",
-    "                od = df[\"IRSTAGECAP\"][\"Value\"]\n",
-    "                df[\"IRSTAGECAP\"][\"Value\"] = [v for x in od]\n",
+    "                df[k][\"Value\"] = [v for x in od]\n",
     "                #print(df[\"IRSTAGECAP\"][\"Value\"])\n",
     "                df.to_json(os.path.join(ws, f), indent=4)\n",
     "            elif isinstance(v, list) and len(v) == 5:\n",
-    "                print(\"max irr mm per phen: {}\".format(v))\n",
-    "                raise Exception\n",
+    "                df[k][\"Value\"] = v\n",
+    "                df.to_json(os.path.join(ws, f), indent=4)\n",
     "            else:\n",
     "                raise Exception\n",
     "                \n",
@@ -219,54 +219,58 @@
     "        # fresh code\n",
     "        elif k == \"IRREFILLPER\":\n",
     "            f = \"RuleBasedIrrigationData.json\"\n",
+    "            df = pd.read_json(os.path.join(ws, f))\n",
+    "            od = df[k][\"Value\"]\n",
     "            if isinstance(v, float):\n",
-    "                df = pd.read_json(os.path.join(ws, f))\n",
     "                #print(df[\"IRREFILLPER\"][\"Value\"])\n",
-    "                od = df[\"IRREFILLPER\"][\"Value\"]\n",
-    "                df[\"IRREFILLPER\"][\"Value\"] = [v for x in od]\n",
+    "                df[k][\"Value\"] = [v for x in od]\n",
     "                #print(df[\"IRREFILLPER\"][\"Value\"])\n",
     "                df.to_json(os.path.join(ws, f), indent=4)\n",
     "            elif isinstance(v, list) and len(v) == 5:\n",
-    "                raise Exception\n",
+    "                df[k][\"Value\"] = v\n",
+    "                df.to_json(os.path.join(ws, f), indent=4)\n",
     "            else:\n",
     "                raise Exception\n",
     "        elif k == \"IRCRITSW\":\n",
     "            f = \"RuleBasedIrrigationData.json\"\n",
+    "            df = pd.read_json(os.path.join(ws, f))\n",
+    "            od = df[k][\"Value\"]\n",
     "            if isinstance(v, float):\n",
-    "                df = pd.read_json(os.path.join(ws, f))\n",
     "                #print(df[\"IRCRITSW\"][\"Value\"])\n",
-    "                od = df[\"IRCRITSW\"][\"Value\"]\n",
-    "                df[\"IRCRITSW\"][\"Value\"] = [v for x in od]\n",
+    "                df[k][\"Value\"] = [v for x in od]\n",
     "                #print(df[\"IRCRITSW\"][\"Value\"])\n",
     "                df.to_json(os.path.join(ws, f), indent=4)\n",
     "            elif isinstance(v, list) and len(v) == 5:\n",
-    "                raise Exception\n",
+    "                df[k][\"Value\"] = v\n",
+    "                df.to_json(os.path.join(ws, f), indent=4)\n",
     "            else:\n",
     "                raise Exception\n",
     "        elif k == \"IRRETNPERIOD\":\n",
     "            f = \"RuleBasedIrrigationData.json\"\n",
+    "            df = pd.read_json(os.path.join(ws, f))\n",
+    "            od = df[k][\"Value\"]\n",
     "            if isinstance(v, float):\n",
-    "                df = pd.read_json(os.path.join(ws, f))\n",
     "                #print(df[\"IRRETNPERIOD\"][\"Value\"])\n",
-    "                od = df[\"IRRETNPERIOD\"][\"Value\"]\n",
-    "                df[\"IRRETNPERIOD\"][\"Value\"] = [v for x in od]\n",
+    "                df[k][\"Value\"] = [v for x in od]\n",
     "                #print(df[\"IRRETNPERIOD\"][\"Value\"])\n",
     "                df.to_json(os.path.join(ws, f), indent=4)\n",
     "            elif isinstance(v, list) and len(v) == 5:\n",
-    "                raise Exception\n",
+    "                df[k][\"Value\"] = v\n",
+    "                df.to_json(os.path.join(ws, f), indent=4)\n",
     "            else:\n",
     "                raise Exception\n",
     "        elif k == \"IRDAYSTAGECAP\":\n",
     "            f = \"RuleBasedIrrigationData.json\"\n",
+    "            df = pd.read_json(os.path.join(ws, f))\n",
+    "            od = df[k][\"Value\"]\n",
     "            if isinstance(v, float):\n",
-    "                df = pd.read_json(os.path.join(ws, f))\n",
     "                #print(df[\"IRDAYSTAGECAP\"][\"Value\"])\n",
-    "                od = df[\"IRDAYSTAGECAP\"][\"Value\"]\n",
-    "                df[\"IRDAYSTAGECAP\"][\"Value\"] = [v for x in od]\n",
+    "                df[k][\"Value\"] = [v for x in od]\n",
     "                #print(df[\"IRDAYSTAGECAP\"][\"Value\"])\n",
     "                df.to_json(os.path.join(ws, f), indent=4)\n",
     "            elif isinstance(v, list) and len(v) == 5:\n",
-    "                raise Exception\n",
+    "                df[k][\"Value\"] = v\n",
+    "                df.to_json(os.path.join(ws, f), indent=4)\n",
     "            else:\n",
     "                raise Exception\n",
     "                \n",
