more list support and check in before share

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -313,6 +313,7 @@
     "    sel_scens = [k for k, v in sel_scens.items()]\n",
     "        \n",
     "    base_d = \"_base\"\n",
+    "    temp_d = \"_simulations\"\n",
     "    on_button_clicked.scen_d = {}\n",
     "    #print(sel_scens)\n",
     "    for sjf in sel_scens:\n",
