couple more state plots

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -431,10 +431,16 @@
     "        elif l1w.value == \"investigation\":\n",
     "            if l2w.value == \"available energy\":\n",
     "                p_d['plot'].value = 'cpoolts'\n",
-    "            if l2w.value == \"fruit energy sink\":\n",
+    "            elif l2w.value == \"fruit energy sink\":\n",
     "                p_d['plot'].value = 'fruitsinkts'\n",
-    "            if l2w.value == \"soil water stress index\":\n",
+    "            elif l2w.value == \"soil water stress index\":\n",
     "                p_d['plot'].value = 'swstressts'\n",
+    "            elif l2w.value == \"potential vine ET\":\n",
+    "                p_d['plot'].value = 'VineEop'\n",
+    "            elif l2w.value == \"potential root uptake\":\n",
+    "                p_d['plot'].value = 'Tru'\n",
+    "            #elif l2w.value == \"supply v demand\":\n",
+    "             #   p_d['plot'].value = 'supplydemand'\n",
     "        else:\n",
     "            p_d['plot'].value = 'underdev'\n",
     "    else:\n",
@@ -461,7 +467,7 @@
     "d1['rainfall'] = ['time series']\n",
     "d1['ponding'] = ['time series']\n",
     "d1['key dates'] = ['bud burst', 'first flower', 'veraison', 'harvest']\n",
-    "d1['investigation'] = ['available energy', 'fruit energy sink', 'soil water stress index']\n",
+    "d1['investigation'] = ['available energy', 'fruit energy sink', 'soil water stress index', 'potential vine ET', 'potential root uptake']\n",
     "d1['growth'] = ['canopy', 'fruit', 'Brix']\n",
     "d1['end of season'] = ['yield']\n",
     "d1['revenue'] = ['crush']\n",
@@ -583,7 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -592,7 +598,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#display(button)"
+    "display(button)"
    ]
   },
   {
