adding more plots and plot interps such as soil water limits

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -456,7 +456,7 @@
    "source": [
     "d0 = {'how my vine is developing' : ['growth', 'key dates', 'end of season', 'investigation'], \n",
     "      'where my water is going' : ['irrigation', 'rainfall', 'ponding', 'evaporation', \n",
-    "                                   'infiltration', 'soil moisture', 'root uptake'],\n",
+    "                                   'infiltration', 'soil moisture', 'atheta', 'root uptake', 'water table', 'drainage'],\n",
     "      'what my financial position is': ['revenue', 'costs', 'bottom line']}\n",
     "d1 = {v: [] for v in [x for y in list(d0.values()) for x in y]}  # one level? at a time - to avoid multi-index hassle\n",
     "d1['irrigation'] = ['time series', 'total']\n",
@@ -464,11 +464,12 @@
     "d1['evaporation'] = ['time series']\n",
     "d1['soil moisture'] = ['time series']\n",
     "d1['root uptake'] = ['time series']\n",
-    "d1['rainfall'] = ['time series']\n",
+    "d1['rainfall'] = ['time series', 'total']\n",
     "d1['ponding'] = ['time series']\n",
     "d1['key dates'] = ['bud burst', 'first flower', 'veraison', 'harvest']\n",
-    "d1['investigation'] = ['available energy', 'fruit energy sink', 'soil water stress index', 'potential vine ET', 'potential root uptake']\n",
-    "d1['growth'] = ['canopy', 'fruit', 'Brix']\n",
+    "d1['investigation'] = ['available energy', 'fruit energy sink', 'fruit energy supply vs demand', 'soil water stress index', \n",
+    "                       'potential vine ET', 'potential root uptake', 'vreserve', 'vcarbo', 'pcarb']\n",
+    "d1['growth'] = ['canopy', 'berry number per shoot',  'berry number per vine', 'shoot number', 'fruit', 'Brix']\n",
     "d1['end of season'] = ['yield']\n",
     "d1['revenue'] = ['crush']\n",
     "d1['costs'] = ['irrigation', 'total']  #'labour', 'diesel', 'chemical', \n",
@@ -589,7 +590,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -598,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#display(button)"
+    "display(button)"
    ]
   },
   {
@@ -632,39 +633,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# display(level0_widget)\n",
     "# display(level1_widget)\n",
     "# display(level2_widget)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
