check in - prep for grower advisory group - again

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -633,7 +633,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -644,7 +644,7 @@
    },
    "outputs": [],
    "source": [
-    "display(button)"
+    "#display(button)"
    ]
   },
   {
