check in before meeting with Anne

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -482,11 +482,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d0 = {'how my vine is developing' : ['growth', 'key dates', 'end of season',],# 'investigation'], \n",
+    "d0 = {'how my vine is developing' : ['growth', 'key dates', 'end of season', 'investigation'], \n",
     "      'where my water is going' : ['irrigation', 'rainfall', 'ponding', 'runoff', 'evaporation', \n",
-    "                                   'infiltration', 'soil moisture', 'root uptake'],#'soil water deficit irrigation trigger',\n",
-    "                                   #'root uptake', 'drainage', 'total soil water', \n",
-    "                                   #'soil water balance components', 'soil water balance error'], #'tsw2','tswtop', 'wet1','water table'\n",
+    "                                   'infiltration', 'soil moisture', 'soil water deficit irrigation trigger',\n",
+    "                                   'root uptake', 'drainage', 'total soil water', \n",
+    "                                   'soil water balance components', 'soil water balance error'], #'tsw2','tswtop', 'wet1','water table'\n",
     "      'what my financial position is': ['revenue', 'costs', 'bottom line']}\n",
     "d1 = {v: [] for v in [x for y in list(d0.values()) for x in y]}  # one level? at a time - to avoid multi-index hassle\n",
     "d1['irrigation'] = ['time series', 'total']\n",
@@ -507,8 +507,9 @@
     "d1['ponding'] = ['time series']\n",
     "d1['runoff'] = ['time series']\n",
     "d1['key dates'] = ['bud burst', 'first flower', 'veraison', 'harvest']\n",
-    "d1['investigation'] = ['available energy', 'fruit energy sink', 'fruit energy supply vs demand', 'soil water stress index', \n",
-    "                       'potential vine ET', 'root uptake', 'vreserve', 'vcarbo', 'pcarb']\n",
+    "d1['investigation'] = ['available energy', 'fruit energy sink', 'fruit energy supply vs demand', \n",
+    "                       'soil water stress index', 'potential vine ET', 'root uptake', \n",
+    "                       'vreserve', 'vcarbo', 'pcarb']\n",
     "d1['growth'] = ['canopy', 'fruit', 'Brix']#'berry number per shoot',  'berry number per vine', 'shoot number', \n",
     "d1['end of season'] = ['yield']\n",
     "d1['revenue'] = ['crush']\n",
@@ -630,7 +631,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
