--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -410,10 +410,10 @@
     "        elif l1w.value == \"soil water balance error\" and l2w.value == \"time series\":\n",
     "            p_d['plot'].value = 'swbts'\n",
     "        elif l1w.value == \"soil water balance components\":\n",
-    "            if l2w.value == \"pie charts\":\n",
-    "                p_d['plot'].value = 'swbpie'\n",
-    "            else:\n",
-    "                p_d['plot'].value = 'swbbar'\n",
+    "            #if l2w.value == \"pie charts\":\n",
+    "             #   p_d['plot'].value = 'swbpie'\n",
+    "            #else:\n",
+    "            p_d['plot'].value = 'swbbar'\n",
     "        elif l1w.value == \"tswtop\" and l2w.value == \"time series\":\n",
     "            p_d['plot'].value = 'tswtopts'\n",
     "        elif l1w.value == \"wet1\" and l2w.value == \"time series\":\n",
@@ -442,6 +442,12 @@
     "                p_d['plot'].value = 'fruittimeseries'\n",
     "            elif l2w.value == \"Brix\":\n",
     "                p_d['plot'].value = 'brixtimeseries'\n",
+    "            elif l2w.value == \"berry number per shoot\":\n",
+    "                p_d['plot'].value = 'berrynumshoottimeseries'\n",
+    "            elif l2w.value == \"shoot number\":\n",
+    "                p_d['plot'].value = 'shootnumtimeseries'\n",
+    "            elif l2w.value == \"bud number\":\n",
+    "                p_d['plot'].value = 'budnovinetimeseries'\n",
     "        elif l1w.value == \"key dates\":\n",
     "            #p_d['plot'].value = l2w.value\n",
     "            if l2w.value == \"bud burst\":\n",
@@ -452,7 +458,7 @@
     "                p_d['plot'].value = 'vsdate'\n",
     "            elif l2w.value == \"harvest\":\n",
     "                p_d['plot'].value = 'hvdate'\n",
-    "        elif l1w.value == \"costs\" and l2w.value == \"total\":\n",
+    "        elif l1w.value == \"costs\" and l2w.value == \"irrigation plus canopy and disease management\":\n",
     "            p_d['plot'].value = 'costcontributions'\n",
     "        elif l1w.value == \"bottom line\" and l2w.value == \"gross margin\":\n",
     "            p_d['plot'].value = 'grossmargin'\n",
@@ -463,16 +469,22 @@
     "                p_d['plot'].value = 'fruitsinkts'\n",
     "            elif l2w.value == \"soil water stress index\":\n",
     "                p_d['plot'].value = 'swstressts'\n",
-    "            elif l2w.value == \"potential vine ET\":\n",
+    "            elif l2w.value == \"potential vine transpiration\":\n",
     "                p_d['plot'].value = 'VineEop'\n",
-    "            elif l2w.value == \"potential root uptake\":\n",
+    "            elif l2w.value == \"root uptake\":\n",
     "                p_d['plot'].value = 'Tru'\n",
     "            #elif l2w.value == \"supply v demand\":\n",
     "             #   p_d['plot'].value = 'supplydemand'\n",
+    "            elif l2w.value == \"reserve energy store\":\n",
+    "                p_d['plot'].value = 'vreservets'\n",
+    "            elif l2w.value == \"carbon assimilate produced\":\n",
+    "                p_d['plot'].value = 'vcarbots'\n",
+    "            elif l2w.value == \"potential carbon production\":\n",
+    "                p_d['plot'].value = 'pcarbts'\n",
     "        else:\n",
     "            p_d['plot'].value = 'underdev'\n",
     "    else:\n",
-    "        raise Exception(\"Please select an option from each of the drop-down menus\")\n",
+    "        raise Exception(\"Please select other menu drop-down options first...\")\n",
     "    return p_d"
    ]
   },
@@ -495,7 +507,7 @@
     "d1['soil moisture'] = ['time series']\n",
     "d1['soil water deficit irrigation trigger'] = ['time series']\n",
     "d1['soil water balance error'] = ['time series']\n",
-    "d1['soil water balance components'] = ['bar charts', 'pie charts']\n",
+    "d1['soil water balance components'] = ['bar chart']#'pie charts', \n",
     "d1['total soil water'] = ['time series']\n",
     "#d1['tsw2'] = ['time series']\n",
     "#d1['tswtop'] = ['time series']\n",
@@ -508,12 +520,12 @@
     "d1['runoff'] = ['time series']\n",
     "d1['key dates'] = ['bud burst', 'first flower', 'veraison', 'harvest']\n",
     "d1['investigation'] = ['available energy', 'fruit energy sink', 'fruit energy supply vs demand', \n",
-    "                       'soil water stress index', 'potential vine ET', 'root uptake', \n",
-    "                       'vreserve', 'vcarbo', 'pcarb']\n",
-    "d1['growth'] = ['canopy', 'fruit', 'Brix']#'berry number per shoot',  'berry number per vine', 'shoot number', \n",
+    "                       'soil water stress index', 'potential vine transpiration', 'root uptake', \n",
+    "                       'reserve energy store', 'carbon assimilate produced', 'potential carbon production']\n",
+    "d1['growth'] = ['canopy', 'fruit', 'Brix', 'bud number', 'berry number per shoot', 'shoot number'] \n",
     "d1['end of season'] = ['yield']\n",
     "d1['revenue'] = ['crush']\n",
-    "d1['costs'] = ['irrigation', 'total']  #'labour', 'diesel', 'chemical', \n",
+    "d1['costs'] = ['irrigation', 'irrigation plus canopy and disease management']  #'labour', 'diesel', 'chemical', \n",
     "d1['bottom line'] = ['gross margin']\n",
     "\n",
     "level0_widget = Dropdown( options=list(d0.keys()),\n",
@@ -524,7 +536,7 @@
     "                         value=None,\n",
     "                         description='',\n",
     "                       )\n",
-    "level2_widget = Dropdown( options=d0['how my vine is developing'],\n",
+    "level2_widget = Dropdown( options=[\"Please select other menu drop-down options first...\", ],\n",
     "                         value=None,\n",
     "                         description='',\n",
     "                       )\n",
@@ -555,7 +567,7 @@
     "                                               and \"bottom line\" not in change['old'] and \"growth\" not in change['old']\n",
     "                                               and \"key dates\" not in change['old'] \n",
     "                                               and \"end of season\" not in change['old']))):\n",
-    "            #print(change)\n",
+    "            print(change)\n",
     "            on_change(change)\n",
     "\n",
     "def on_change2(change):\n",
@@ -564,7 +576,7 @@
     "            \"water\" in level0_widget.value and \"irrigation\" in level1_widget.value) or (\n",
     "            \"water\" in level0_widget.value and \"rain\" in level1_widget.value) or (\n",
     "            \"water\" in level0_widget.value and \"soil water balance components\" in level1_widget.value):\n",
-    "            #print(change)\n",
+    "            print(change)\n",
     "            on_change(change)\n",
     "            \n",
     "def on_change(change):\n",
@@ -588,7 +600,7 @@
     "        on_button_clicked.sel_scens\n",
     "        on_button_clicked.scen_d\n",
     "    except AttributeError:\n",
-    "        print(\"Please Evaluate Scenario(s)\")\n",
+    "        raise Exception(\"Please Evaluate Scenario(s)\")\n",
     "    for k, v in on_button_clicked.sel_scens.items():\n",
     "        dd[v] = on_button_clicked.scen_d[k.strip(\".json\")]\n",
     "    #print(list(on_button_clicked.scen_d.keys()))\n",
@@ -636,18 +648,18 @@
    },
    "outputs": [],
    "source": [
-    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "#display(button)"
+    "display(button)"
    ]
   },
   {
