--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -567,16 +567,16 @@
     "                                               and \"bottom line\" not in change['old'] and \"growth\" not in change['old']\n",
     "                                               and \"key dates\" not in change['old'] \n",
     "                                               and \"end of season\" not in change['old']))):\n",
-    "            print(change)\n",
+    "            #print(change)\n",
     "            on_change(change)\n",
     "\n",
     "def on_change2(change):\n",
     "    if change['type'] == 'change' and change['name'] == 'value':\n",
     "        if \"water\" not in level0_widget.value or (\n",
     "            \"water\" in level0_widget.value and \"irrigation\" in level1_widget.value) or (\n",
-    "            \"water\" in level0_widget.value and \"rain\" in level1_widget.value) or (\n",
-    "            \"water\" in level0_widget.value and \"soil water balance components\" in level1_widget.value):\n",
-    "            print(change)\n",
+    "            \"water\" in level0_widget.value and \"rain\" in level1_widget.value):# or (\n",
+    "            #\"water\" in level0_widget.value and \"soil water balance components\" in level1_widget.value):\n",
+    "            #print(change)\n",
     "            on_change(change)\n",
     "            \n",
     "def on_change(change):\n",
@@ -648,7 +648,7 @@
    },
    "outputs": [],
    "source": [
-    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -659,7 +659,7 @@
    },
    "outputs": [],
    "source": [
-    "display(button)"
+    "#display(button)"
    ]
   },
   {
