adding support of SA allocation factor

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,6 +161,7 @@
     "              \"Water market cost\": \"water_market_rate\",\n",
     "              \"Water delivery cost\": \"water_delivery_rate\",\n",
     "              \"Water entitlement\": \"water_entitlement\",\n",
+    "              \"Water allocation factor\": \"allocation_factor\",\n",
     "              \"Cost per tip\": \"costs_per_tip\", \"Number of tips\": \"ntips\",\n",
     "              \"Cost per spray\": \"costs_per_spray\", \"Number of sprays\": \"nsprays\",\n",
     "              \"Days between irrigation applications per phenology\": \"IRRETNPERIOD\", \n",
@@ -648,7 +649,7 @@
    },
    "outputs": [],
    "source": [
-    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -659,7 +660,7 @@
    },
    "outputs": [],
    "source": [
-    "#display(button)"
+    "display(button)"
    ]
   },
   {
