adding support for priviate diversions

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,6 +162,7 @@
     "              \"Water delivery cost\": \"water_delivery_rate\",\n",
     "              \"Water entitlement\": \"water_entitlement\",\n",
     "              \"Water allocation factor\": \"allocation_factor\",\n",
+    "              \"Private diversion factor\": \"diversion_factor\",\n",
     "              \"Cost per tip\": \"costs_per_tip\", \"Number of tips\": \"ntips\",\n",
     "              \"Cost per spray\": \"costs_per_spray\", \"Number of sprays\": \"nsprays\",\n",
     "              \"Days between irrigation applications per phenology\": \"IRRETNPERIOD\", \n",
