--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -499,7 +499,7 @@
     "d0 = {'how my vine is developing' : ['growth', 'key dates', 'end of season', 'investigation'], \n",
     "      'where my water is going' : ['irrigation', 'rainfall', 'ponding', 'runoff', 'evaporation', \n",
     "                                   'infiltration', 'soil moisture', 'soil water deficit irrigation trigger',\n",
-    "                                   'root uptake', 'drainage', 'total soil water', \n",
+    "                                   'root uptake', 'total soil water', \n",
     "                                   'soil water balance components', 'soil water balance error'], #'tsw2','tswtop', 'wet1','water table'\n",
     "      'what my financial position is': ['revenue', 'costs', 'bottom line']}\n",
     "d1 = {v: [] for v in [x for y in list(d0.values()) for x in y]}  # one level? at a time - to avoid multi-index hassle\n",
@@ -521,9 +521,9 @@
     "d1['ponding'] = ['time series']\n",
     "d1['runoff'] = ['time series']\n",
     "d1['key dates'] = ['bud burst', 'first flower', 'veraison', 'harvest']\n",
-    "d1['investigation'] = ['available energy', 'fruit energy sink', 'fruit energy supply vs demand', \n",
+    "d1['investigation'] = ['available energy', 'fruit energy sink',  \n",
     "                       'soil water stress index', 'potential vine transpiration', 'root uptake', \n",
-    "                       'reserve energy store', 'carbon assimilate produced', 'potential carbon production']\n",
+    "                       'reserve energy store', 'carbon assimilate produced', 'potential carbon production'] #'fruit energy supply vs demand'\n",
     "d1['growth'] = ['canopy', 'fruit', 'Brix', 'bud number', 'berry number per shoot', 'shoot number'] \n",
     "d1['end of season'] = ['yield']\n",
     "d1['revenue'] = ['crush']\n",
