--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -650,7 +650,7 @@
    },
    "outputs": [],
    "source": [
-    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -661,7 +661,7 @@
    },
    "outputs": [],
    "source": [
-    "display(button)"
+    "#display(button)"
    ]
   },
   {
