--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -68,9 +68,9 @@
     "                         value='shiraz',\n",
     "                         description='variety',\n",
     "                       )\n",
-    "rootstock_d = {'rootstock': ['Schwartzmann']}\n",
+    "rootstock_d = {'rootstock': ['Own Roots', 'Schwarzmann', 'Ramsey']}\n",
     "rootstock_widget = Dropdown( options=rootstock_d['rootstock'],\n",
-    "                         value='Schwartzmann',\n",
+    "                         value='Schwarzmann',\n",
     "                         description='rootstock',\n",
     "                       )\n",
     "#style = {'description_width': 'initial'}\n",
@@ -78,7 +78,32 @@
     "#entitl_widget = HBox([Label('entitl. (ML)'), entitl_widget])\n",
     "left_box = VBox([variety_widget, ])#entitl_widget])\n",
     "right_box = VBox([rootstock_widget])\n",
-    "#HBox([left_box, right_box])"
+    "HBox([left_box, right_box])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cultivar_par_df = \n",
+    "#for w in [rootstock_widget.value, ]:#variety_widget.value]:\n",
+    "#s = rs_par_df.loc[rootstock_widget.value, :]\n",
+    "#for c in s.columns:\n",
+    " #   print(c)\n",
+    "    #apply_vinelogic_par(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cultivar_par_df = pd.read_csv(os.path.join(\"_data\", \"CSIRO_VineLOGIC_datasets\", \"berry3.cul\"))\n",
+    "#vineyard json\n",
+    "#then to vinelogic"
    ]
   },
   {
@@ -106,11 +131,20 @@
    "outputs": [],
    "source": [
     "scen_names = {}\n",
-    "scen_fnames = [x for x in os.listdir() if \".json\" in x]\n",
+    "scen_fnames = [x for x in os.listdir() if \".json\" in x and \"Scen\" in x and \"Copy\" not in x]\n",
     "for js in scen_fnames:\n",
     "    scen_names[js] = pd.read_json(os.path.join(js)).keys()[0]  #.tolist())\n",
-    "#scen_names = [x.strip(\".json\") for x in os.listdir() if \"Scenario\" in x and \".json\" in x]\n",
     "#print(scen_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## TODO: add 'gotcha' checks here - ensure three unique scenario files only\n",
+    "#i.e., handle scen file copies, ensure none with same name"
    ]
   },
   {
@@ -168,6 +202,8 @@
     "              \"Days between irrigation applications per phenology\": \"IRRETNPERIOD\", \n",
     "              \"Soil water irrigation trigger per phenology\": \"IRCRITSW\",\n",
     "              \"Soil water irrigation defict refill percent per phenology\": \"IRREFILLPER\", \n",
+    "              \"Rootstock\": \"Rootstock\",\n",
+    "              \"Variety\": \"Variety\",\n",
     "             }\n",
     "    d = {}\n",
     "    js = pd.read_json(os.path.join(scen_json_fname))\n",
@@ -196,86 +232,48 @@
    "source": [
     "def scen_json_to_vinelogic(d, ws):\n",
     "    for k, v in d[ws].items():\n",
-    "        #print(\"k, v: {0} {1}\".format(k, v))\n",
+    "        #print(k, v)\n",
     "        \n",
-    "        # TODO: read json here then loop over vars!\n",
+    "        if k.startswith(\"IR\"):  # RuleBasedIrrigation\n",
+    "            f = \"RuleBasedIrrigationData.json\"\n",
+    "            df = pd.read_json(os.path.join(ws, f))\n",
+    "            od = df[k][\"Value\"]\n",
+    "            if isinstance(v, float):\n",
+    "                df[k][\"Value\"] = [v for x in od]\n",
+    "                df.to_json(os.path.join(ws, f), indent=4)\n",
+    "            elif isinstance(v, list) and len(v) == 5:\n",
+    "                df[k][\"Value\"] = v\n",
+    "                df.to_json(os.path.join(ws, f), indent=4)\n",
+    "            else:\n",
+    "                raise Exception\n",
+    "                \n",
+    "        elif k == \"Rootstock\":\n",
+    "            rs_vars = [\"RstockVigIndex\", \"RstockAernSens\"]\n",
+    "            f = \"Rootstock.json\"\n",
+    "            df = pd.read_json(os.path.join(ws, f))\n",
+    "            # TODO: read from _data\n",
+    "            #rs_par_df = pd.read_csv(os.path.join(\"_data\", \"CSIRO_VineLOGIC_datasets\", \"Rootstock050.cul\"), sep='\\t', \n",
+    "             #                        skiprows=1, index_col=2)\n",
+    "            rs_par_df = pd.DataFrame([[3,7],[9,5],[9,9]], index=[\"Own Roots\", \"Ramsey\", \"Schwarzmann\"], \n",
+    "                                     columns=[\"RstockVigIndex\", \"RstockAernSens\"])  # from CSIRO_VineLOGIC_datasets, Rootstock050.cul\n",
+    "            for rsv in rs_vars:\n",
+    "                df[rsv][\"Value\"] = rs_par_df.loc[v, rsv]\n",
+    "            df.to_json(os.path.join(ws, f), indent=4)\n",
     "        \n",
-    "        if k == \"IRSTAGECAP\":  # max over phenological stage(s)\n",
-    "            f = \"RuleBasedIrrigationData.json\"\n",
+    "        elif k == \"Variety\":\n",
+    "            cul_vars = [\"SetDD\", \"BeginVerdd\", \"dw1\", \"dw2\", \"critbrix\", \"banth\", \"canth\"]\n",
+    "            f = [\"BerryCultivar.json\"]#, \"Cultivar.json\"]\n",
     "            df = pd.read_json(os.path.join(ws, f))\n",
-    "            od = df[k][\"Value\"]\n",
-    "            if isinstance(v, float):\n",
-    "                #print(\"uniform max irr mm: {}\".format(v))\n",
-    "                #print(df[\"IRSTAGECAP\"][\"Value\"])\n",
-    "                df[k][\"Value\"] = [v for x in od]\n",
-    "                #print(df[\"IRSTAGECAP\"][\"Value\"])\n",
-    "                df.to_json(os.path.join(ws, f), indent=4)\n",
-    "            elif isinstance(v, list) and len(v) == 5:\n",
-    "                df[k][\"Value\"] = v\n",
-    "                df.to_json(os.path.join(ws, f), indent=4)\n",
-    "            else:\n",
-    "                raise Exception\n",
-    "                \n",
-    "        # TODO: impose daily maximum on VineLOGIC\n",
-    "                \n",
-    "        # fresh code\n",
-    "        elif k == \"IRREFILLPER\":\n",
-    "            f = \"RuleBasedIrrigationData.json\"\n",
-    "            df = pd.read_json(os.path.join(ws, f))\n",
-    "            od = df[k][\"Value\"]\n",
-    "            if isinstance(v, float):\n",
-    "                #print(df[\"IRREFILLPER\"][\"Value\"])\n",
-    "                df[k][\"Value\"] = [v for x in od]\n",
-    "                #print(df[\"IRREFILLPER\"][\"Value\"])\n",
-    "                df.to_json(os.path.join(ws, f), indent=4)\n",
-    "            elif isinstance(v, list) and len(v) == 5:\n",
-    "                df[k][\"Value\"] = v\n",
-    "                df.to_json(os.path.join(ws, f), indent=4)\n",
-    "            else:\n",
-    "                raise Exception\n",
-    "        elif k == \"IRCRITSW\":\n",
-    "            f = \"RuleBasedIrrigationData.json\"\n",
-    "            df = pd.read_json(os.path.join(ws, f))\n",
-    "            od = df[k][\"Value\"]\n",
-    "            if isinstance(v, float):\n",
-    "                #print(df[\"IRCRITSW\"][\"Value\"])\n",
-    "                df[k][\"Value\"] = [v for x in od]\n",
-    "                #print(df[\"IRCRITSW\"][\"Value\"])\n",
-    "                df.to_json(os.path.join(ws, f), indent=4)\n",
-    "            elif isinstance(v, list) and len(v) == 5:\n",
-    "                df[k][\"Value\"] = v\n",
-    "                df.to_json(os.path.join(ws, f), indent=4)\n",
-    "            else:\n",
-    "                raise Exception\n",
-    "        elif k == \"IRRETNPERIOD\":\n",
-    "            f = \"RuleBasedIrrigationData.json\"\n",
-    "            df = pd.read_json(os.path.join(ws, f))\n",
-    "            od = df[k][\"Value\"]\n",
-    "            if isinstance(v, float):\n",
-    "                #print(df[\"IRRETNPERIOD\"][\"Value\"])\n",
-    "                df[k][\"Value\"] = [v for x in od]\n",
-    "                #print(df[\"IRRETNPERIOD\"][\"Value\"])\n",
-    "                df.to_json(os.path.join(ws, f), indent=4)\n",
-    "            elif isinstance(v, list) and len(v) == 5:\n",
-    "                df[k][\"Value\"] = v\n",
-    "                df.to_json(os.path.join(ws, f), indent=4)\n",
-    "            else:\n",
-    "                raise Exception\n",
-    "        elif k == \"IRDAYSTAGECAP\":\n",
-    "            f = \"RuleBasedIrrigationData.json\"\n",
-    "            df = pd.read_json(os.path.join(ws, f))\n",
-    "            od = df[k][\"Value\"]\n",
-    "            if isinstance(v, float):\n",
-    "                #print(df[\"IRDAYSTAGECAP\"][\"Value\"])\n",
-    "                df[k][\"Value\"] = [v for x in od]\n",
-    "                #print(df[\"IRDAYSTAGECAP\"][\"Value\"])\n",
-    "                df.to_json(os.path.join(ws, f), indent=4)\n",
-    "            elif isinstance(v, list) and len(v) == 5:\n",
-    "                df[k][\"Value\"] = v\n",
-    "                df.to_json(os.path.join(ws, f), indent=4)\n",
-    "            else:\n",
-    "                raise Exception\n",
-    "                \n",
+    "            # TODO: read from _data - Vines050.cul (Cultivar.json) and berry3.cul (BerryCultivar.json)\n",
+    "            #rs_par_df = pd.read_csv(os.path.join(\"_data\", \"CSIRO_VineLOGIC_datasets\", \"Rootstock050.cul\"), sep='\\t', \n",
+    "             #                        skiprows=1, index_col=2)\n",
+    "            rs_par_df = pd.DataFrame([[3,7],[9,5],[9,9]], index=[\"Own Roots\", \"Ramsey\", \"Schwarzmann\"], \n",
+    "                                     columns=[\"RstockVigIndex\", \"RstockAernSens\"])  # from CSIRO_VineLOGIC_datasets, Rootstock050.cul\n",
+    "            for rsv in rs_vars:\n",
+    "                df[rsv][\"Value\"] = rs_par_df.loc[v, rsv]\n",
+    "            df.to_json(os.path.join(ws, f), indent=4)\n",
+    "            \n",
+    "        \n",
     "        # bud no.... related to pruning strategy"
    ]
   },
@@ -650,7 +648,7 @@
    },
    "outputs": [],
    "source": [
-    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -661,7 +659,7 @@
    },
    "outputs": [],
    "source": [
-    "#display(button)"
+    "display(button)"
    ]
   },
   {
