check in after variety and rootstock support

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -248,31 +248,45 @@
     "                raise Exception\n",
     "                \n",
     "        elif k == \"Rootstock\":\n",
-    "            rs_vars = [\"RstockVigIndex\", \"RstockAernSens\"]\n",
+    "            rs_vars = [\"RootstockName\", \"RootstockID\", \"RstockVigIndex\", \"RstockAernSens\"]\n",
     "            f = \"Rootstock.json\"\n",
+    "            rs_types = [\"Own Roots\", \"Ramsey\", \"Schwarzmann\"]\n",
     "            df = pd.read_json(os.path.join(ws, f))\n",
     "            # TODO: read from _data\n",
     "            #rs_par_df = pd.read_csv(os.path.join(\"_data\", \"CSIRO_VineLOGIC_datasets\", \"Rootstock050.cul\"), sep='\\t', \n",
     "             #                        skiprows=1, index_col=2)\n",
-    "            rs_par_df = pd.DataFrame([[3,7],[9,5],[9,9]], index=[\"Own Roots\", \"Ramsey\", \"Schwarzmann\"], \n",
-    "                                     columns=[\"RstockVigIndex\", \"RstockAernSens\"])  # from CSIRO_VineLOGIC_datasets, Rootstock050.cul\n",
+    "            rs_par_df = pd.DataFrame([[\"Own Roots\",\"00001\",3,7],[\"Ramsey\",\"00002\",9,5],[\"Schwarzmann\",\"00005\",9,9]], index=rs_types, \n",
+    "                                     columns=rs_vars)  # from CSIRO_VineLOGIC_datasets, Rootstock050.cul\n",
     "            for rsv in rs_vars:\n",
     "                df[rsv][\"Value\"] = rs_par_df.loc[v, rsv]\n",
     "            df.to_json(os.path.join(ws, f), indent=4)\n",
+    "            # TODO: quite a few un-utilized variables here\n",
     "        \n",
     "        elif k == \"Variety\":\n",
-    "            cul_vars = [\"SetDD\", \"BeginVerdd\", \"dw1\", \"dw2\", \"critbrix\", \"banth\", \"canth\"]\n",
-    "            f = [\"BerryCultivar.json\"]#, \"Cultivar.json\"]\n",
-    "            df = pd.read_json(os.path.join(ws, f))\n",
-    "            # TODO: read from _data - Vines050.cul (Cultivar.json) and berry3.cul (BerryCultivar.json)\n",
-    "            #rs_par_df = pd.read_csv(os.path.join(\"_data\", \"CSIRO_VineLOGIC_datasets\", \"Rootstock050.cul\"), sep='\\t', \n",
-    "             #                        skiprows=1, index_col=2)\n",
-    "            rs_par_df = pd.DataFrame([[3,7],[9,5],[9,9]], index=[\"Own Roots\", \"Ramsey\", \"Schwarzmann\"], \n",
-    "                                     columns=[\"RstockVigIndex\", \"RstockAernSens\"])  # from CSIRO_VineLOGIC_datasets, Rootstock050.cul\n",
-    "            for rsv in rs_vars:\n",
-    "                df[rsv][\"Value\"] = rs_par_df.loc[v, rsv]\n",
-    "            df.to_json(os.path.join(ws, f), indent=4)\n",
-    "            \n",
+    "            varieties = [\"Shiraz\", \"Chardonnay\", \"Cabernet Sauvignon\", \"Colombard\"]\n",
+    "            bcul_vars = [\"SetDD\", \"BeginVerdd\", \"dw1\", \"dw2\", \"critbrix\", \"banth\", \"canth\"]\n",
+    "            cul_vars = [\"VarietyName\", \"VarietyID\", \"P1VV\", \"P2BB\", \"P3FF\", \"P4HH\", \"P5LF\", \"G1BN\", \"PHINT\"]\n",
+    "            f = [\"BerryCultivar.json\", \"Cultivar.json\"]\n",
+    "            bc_par_df = pd.DataFrame([[100,700,0.00015,0.0006,19,0.331,17.929],\n",
+    "                          [100,700,0.00015,0.0008,19,0.0,0.0],\n",
+    "                          [100,700,0.0002,0.003,19,2.49,17.272],\n",
+    "                          [100,700,0.00015,0.01,19,0.0,0.0]], \n",
+    "                         index=varieties, columns=bcul_vars)  # from CSIRO_VineLOGIC_datasets, Rootstock050.cul\n",
+    "            c_par_df = pd.DataFrame([[\"SHIRAZ\",\"IB0007\",5,325,140,1450,800,0.5,42.0],\n",
+    "                          [\"CHARDONNAY\",\"IB0003\",5,210,180,1550,900,1.0,42.0],\n",
+    "                          [\"CABERNET SAUVIGNON\",\"IB0002\",5,275,125,1700,500,0.9,42.0],\n",
+    "                          [\"COLOMBARD\",\"IB0015\",5,210,160,1650,900,1.0,42.0]], \n",
+    "                         index=varieties, columns=cul_vars)  # from CSIRO_VineLOGIC_datasets, Rootstock050.cul\n",
+    "            for ff in f:\n",
+    "                df = pd.read_json(os.path.join(ws, ff))\n",
+    "                # TODO: read from _data - Vines050.cul (Cultivar.json) and berry3.cul (BerryCultivar.json)\n",
+    "                if \"Berry\" in ff:\n",
+    "                    for bcv in bcul_vars:\n",
+    "                        df[bcv][\"Value\"] = bc_par_df.loc[v, bcv]\n",
+    "                else:\n",
+    "                    for cv in cul_vars:\n",
+    "                        df[cv][\"Value\"] = c_par_df.loc[v, cv]\n",
+    "                df.to_json(os.path.join(ws, ff), indent=4)\n",
     "        \n",
     "        # bud no.... related to pruning strategy"
    ]
@@ -673,13 +687,6 @@
     "l_box, c_box, r_box = VBox([level0_widget]), VBox([level1_widget]), VBox([level2_widget])\n",
     "display(HBox([l_box, c_box, r_box]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
