adding financial case study benchmark data

--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -23,7 +23,7 @@
     "import time\n",
     "import shutil\n",
     "import platform\n",
-    "print(\"running on...: {}\".format(platform.platform()))"
+    "#print(\"running on...: {}\".format(platform.platform()))"
    ]
   },
   {
@@ -687,6 +687,13 @@
     "l_box, c_box, r_box = VBox([level0_widget]), VBox([level1_widget]), VBox([level2_widget])\n",
     "display(HBox([l_box, c_box, r_box]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
