--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -663,7 +663,7 @@
    },
    "outputs": [],
    "source": [
-    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -674,7 +674,7 @@
    },
    "outputs": [],
    "source": [
-    "display(button)"
+    "#display(button)"
    ]
   },
   {
