--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -234,6 +234,7 @@
     "    for k, v in d[ws].items():\n",
     "        #print(k, v)\n",
     "        \n",
+    "        # TODO: generalize to apply_irrig_vars() here....\n",
     "        if k.startswith(\"IR\"):  # RuleBasedIrrigation\n",
     "            f = \"RuleBasedIrrigationData.json\"\n",
     "            df = pd.read_json(os.path.join(ws, f))\n",
@@ -488,8 +489,8 @@
     "                p_d['plot'].value = 'VineEop'\n",
     "            elif l2w.value == \"root uptake\":\n",
     "                p_d['plot'].value = 'Tru'\n",
-    "            #elif l2w.value == \"supply v demand\":\n",
-    "             #   p_d['plot'].value = 'supplydemand'\n",
+    "            elif l2w.value == \"fruit energy supply vs demand\":\n",
+    "                p_d['plot'].value = 'supplydemand'\n",
     "            elif l2w.value == \"reserve energy store\":\n",
     "                p_d['plot'].value = 'vreservets'\n",
     "            elif l2w.value == \"carbon assimilate produced\":\n",
@@ -536,7 +537,8 @@
     "d1['key dates'] = ['bud burst', 'first flower', 'veraison', 'harvest']\n",
     "d1['investigation'] = ['available energy', 'fruit energy sink',  \n",
     "                       'soil water stress index', 'potential vine transpiration', 'root uptake', \n",
-    "                       'reserve energy store', 'carbon assimilate produced', 'potential carbon production'] #'fruit energy supply vs demand'\n",
+    "                       'reserve energy store', 'carbon assimilate produced', 'potential carbon production', \n",
+    "                       'fruit energy supply vs demand']\n",
     "d1['growth'] = ['canopy', 'fruit', 'Brix', 'bud number', 'berry number per shoot', 'shoot number'] \n",
     "d1['end of season'] = ['yield']\n",
     "d1['revenue'] = ['crush']\n",
@@ -694,7 +696,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#mjknowling.invest_irrig_vol_to_yield_relationship(\"Scenario01\")  #(\"irrig_yield_sens_tests\")"
+   ]
   },
   {
    "cell_type": "code",
