--- a/skinny_vitivisor_dash.ipynb
+++ b/skinny_vitivisor_dash.ipynb
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "scen_names = {}\n",
-    "scen_fnames = [x for x in os.listdir() if \".json\" in x and \"Scen\" in x and \"Copy\" not in x]\n",
+    "scen_fnames = [x for x in os.listdir() if \".json\" in x and \"Scenario\" in x and len(x) == 15]\n",
     "for js in scen_fnames:\n",
     "    scen_names[js] = pd.read_json(os.path.join(js)).keys()[0]  #.tolist())\n",
     "#print(scen_names)"
@@ -269,16 +269,16 @@
     "            bcul_vars = [\"SetDD\", \"BeginVerdd\", \"dw1\", \"dw2\", \"critbrix\", \"banth\", \"canth\"]\n",
     "            cul_vars = [\"VarietyName\", \"VarietyID\", \"P1VV\", \"P2BB\", \"P3FF\", \"P4HH\", \"P5LF\", \"G1BN\", \"PHINT\"]\n",
     "            f = [\"BerryCultivar.json\", \"Cultivar.json\"]\n",
-    "            bc_par_df = pd.DataFrame([[100,700,0.00015,0.0006,19,0.331,17.929],\n",
+    "            bc_par_df = pd.DataFrame([[100,700,0.000175,0.0009,19,0.331,17.929],\n",
     "                          [100,700,0.00015,0.0008,19,0.0,0.0],\n",
     "                          [100,700,0.0002,0.003,19,2.49,17.272],\n",
     "                          [100,700,0.00015,0.01,19,0.0,0.0]], \n",
-    "                         index=varieties, columns=bcul_vars)  # from CSIRO_VineLOGIC_datasets, Rootstock050.cul\n",
+    "                         index=varieties, columns=bcul_vars)  # from CSIRO_VineLOGIC_datasets (Shiraz modified)\n",
     "            c_par_df = pd.DataFrame([[\"SHIRAZ\",\"IB0007\",5,325,140,1450,800,0.5,42.0],\n",
     "                          [\"CHARDONNAY\",\"IB0003\",5,210,180,1550,900,1.0,42.0],\n",
     "                          [\"CABERNET SAUVIGNON\",\"IB0002\",5,275,125,1700,500,0.9,42.0],\n",
     "                          [\"COLOMBARD\",\"IB0015\",5,210,160,1650,900,1.0,42.0]], \n",
-    "                         index=varieties, columns=cul_vars)  # from CSIRO_VineLOGIC_datasets, Rootstock050.cul\n",
+    "                         index=varieties, columns=cul_vars)  # from CSIRO_VineLOGIC_datasets\n",
     "            for ff in f:\n",
     "                df = pd.read_json(os.path.join(ws, ff))\n",
     "                # TODO: read from _data - Vines050.cul (Cultivar.json) and berry3.cul (BerryCultivar.json)\n",
@@ -389,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Seasonal projections"
+    "### Seasonal Projections"
    ]
   },
   {
@@ -456,7 +456,7 @@
     "                p_d['plot'].value = 'laitimeseries'\n",
     "            elif l2w.value == \"fruit\":\n",
     "                p_d['plot'].value = 'fruittimeseries'\n",
-    "            elif l2w.value == \"Brix\":\n",
+    "            elif l2w.value == \"Baume\":\n",
     "                p_d['plot'].value = 'brixtimeseries'\n",
     "            elif l2w.value == \"berry number per shoot\":\n",
     "                p_d['plot'].value = 'berrynumshoottimeseries'\n",
@@ -539,7 +539,7 @@
     "                       'soil water stress index', 'potential vine transpiration', 'root uptake', \n",
     "                       'reserve energy store', 'carbon assimilate produced', 'potential carbon production', \n",
     "                       'fruit energy supply vs demand']\n",
-    "d1['growth'] = ['canopy', 'fruit', 'Brix', 'bud number', 'berry number per shoot', 'shoot number'] \n",
+    "d1['growth'] = ['canopy', 'fruit', 'Baume', 'bud number', 'berry number per shoot', 'shoot number'] \n",
     "d1['end of season'] = ['yield']\n",
     "d1['revenue'] = ['crush']\n",
     "d1['costs'] = ['irrigation', 'irrigation plus canopy and disease management']  #'labour', 'diesel', 'chemical', \n",
@@ -665,7 +665,7 @@
    },
    "outputs": [],
    "source": [
-    "#ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
+    "ipyw.interactive(updateScen, **{c.description: c.value for c in chk})"
    ]
   },
   {
@@ -676,7 +676,7 @@
    },
    "outputs": [],
    "source": [
-    "#display(button)"
+    "display(button)"
    ]
   },
   {
